# findprim-cpu

./: .gitignore  CMakeLists.txt  ExpandedCollectionFile.hh  Makefile  ProcessingInfo.h  README.md  Timer.h  benchmarking.h  check_output.cpp  constants.h  constants.hh  design_fir.h  do_processing.cxx  frame_expand.cpp  frame_expand.h  print_taps.cpp  process_avx2.cpp  process_avx2.h  process_naive.cpp  process_naive.h  process_samples.h  run_algs_avx2.h  run_algs_naive.h  run_naive.cpp  run_one_thread.cxx  setup.sh
